// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiNotificationBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiNotificationBadge testClass1 testClass2"
  data-test-subj="test subject string"
>
  5
</span>
`;

exports[`OuiNotificationBadge props color accent is rendered 1`] = `
<span
  class="ouiNotificationBadge"
>
  5
</span>
`;

exports[`OuiNotificationBadge props color subdued is rendered 1`] = `
<span
  class="ouiNotificationBadge ouiNotificationBadge--subdued"
>
  5
</span>
`;

exports[`OuiNotificationBadge props size m is rendered 1`] = `
<span
  class="ouiNotificationBadge ouiNotificationBadge--medium"
>
  5
</span>
`;

exports[`OuiNotificationBadge props size s is rendered 1`] = `
<span
  class="ouiNotificationBadge"
>
  5
</span>
`;
